--- a/ToDoList/index.html
+++ b/ToDoList/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <div id="header">
-            <a href="https://www.soyhenry.com/" target="_blank_"><img src="./assets/henry.png" /></a>
-            <span>DOM Homework</span>
+            <a href="https://danielcalderon.vercel.app/" target="_blank_"><img src="./assets/henry.png" /></a>
+            <span>DOM </span>
         </div>
         <h1>To-Do App</h1>
         <div><span id="createdBy">Aplicación creada por:</span></div>
