--- a/happy-birthday/index.html
+++ b/happy-birthday/index.html
@@ -5,9 +5,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="./style.css" rel="stylesheet" />
-		
 	</head>
-	<body>
+	<body style="background-color: rgb(218, 216, 115)">
 		<div>
 			<h2>¿Cuantos días falta para tu cumpleaños?</h2>
 			<div class="form">
@@ -19,6 +18,50 @@
 				</form>
 			</div>
 		</div>
-		<script src="./script.js"></script>
+		<script>
+			;(function () {
+				const hoy = new Date()
+				document.getElementById('cumple').max =
+					hoy.getFullYear() +
+					'-' +
+					(hoy.getMonth() + 1) +
+					'-' +
+					(hoy.getDate() < 10
+						? '0' + (hoy.getDate() - 1)
+						: hoy.getDate() - 1)
+			})()
+
+			/**
+			 * Calcula el número de días hasta tu próximo cumpleaños y tu edad actual
+			 */
+			function calcularDias() {
+				let hoy = new Date()
+				let cumple = new Date(document.getElementById('cumple').value)
+				let edad = hoy.getFullYear() - cumple.getFullYear()
+				let siguienteCumple = new Date(
+					hoy.getFullYear(),
+					cumple.getMonth(),
+					cumple.getDate()
+				)
+				if (hoy > siguienteCumple) {
+					siguienteCumple.setFullYear(hoy.getFullYear() + 1)
+				}
+				let unDia = 24 * 60 * 60 * 1000
+				let diasFaltantes = Math.ceil(
+					(siguienteCumple.getTime() - hoy.getTime()) / unDia
+				)
+				if (diasFaltantes == 364) {
+					document.getElementById('resultado').innerText =
+						'¡¡¡ Feliz Cumpleaños !!!'
+				} else if (diasFaltantes && edad < 150) {
+					document.getElementById(
+						'resultado'
+					).innerText = `En ${diasFaltantes} días(s), tendras ${edad} años !!!`
+				} else {
+					document.getElementById('resultado').innerText =
+						'Por favor ingresa una fecha válida!!!'
+				}
+			}
+		</script>
 	</body>
 </html>
